C2P_Translator/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT_MULTI
    COMMENT_SINGLE

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> function_declaration
Rule 6     declaration -> function_definition
Rule 7     declaration -> array_declaration
Rule 8     var_declaration -> type_specifier IDENTIFIER SEMICOLON
Rule 9     var_declaration -> type_specifier TIMES IDENTIFIER SEMICOLON
Rule 10    var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON
Rule 11    array_declaration -> type_specifier IDENTIFIER LBRACKET expression RBRACKET SEMICOLON
Rule 12    array_declaration -> type_specifier IDENTIFIER LBRACKET expression RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
Rule 13    array_declaration -> type_specifier IDENTIFIER LBRACKET RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
Rule 14    array_declaration -> type_specifier IDENTIFIER LBRACKET expression RBRACKET ASSIGN STRING_LITERAL SEMICOLON
Rule 15    array_declaration -> type_specifier IDENTIFIER LBRACKET RBRACKET ASSIGN STRING_LITERAL SEMICOLON
Rule 16    type_specifier -> INT
Rule 17    type_specifier -> FLOAT
Rule 18    type_specifier -> CHAR
Rule 19    type_specifier -> VOID
Rule 20    array_list -> array_list COMMA expression
Rule 21    array_list -> expression
Rule 22    function_declaration -> type_specifier IDENTIFIER LPAREN param_list RPAREN SEMICOLON
Rule 23    function_definition -> type_specifier IDENTIFIER LPAREN param_list RPAREN compound_statement
Rule 24    param_list -> param_list COMMA param
Rule 25    param_list -> param
Rule 26    param_list -> empty
Rule 27    param -> type_specifier IDENTIFIER
Rule 28    param -> type_specifier IDENTIFIER LBRACKET RBRACKET
Rule 29    param -> type_specifier TIMES IDENTIFIER
Rule 30    empty -> <empty>
Rule 31    compound_statement -> LBRACE statement_list RBRACE
Rule 32    statement_list -> statement_list statement
Rule 33    statement_list -> statement
Rule 34    statement -> expression_statement
Rule 35    statement -> compound_statement
Rule 36    statement -> selection_statement
Rule 37    statement -> iteration_statement
Rule 38    statement -> return_statement
Rule 39    statement -> continue_statement
Rule 40    statement -> break_statement
Rule 41    statement -> var_declaration
Rule 42    statement -> array_declaration
Rule 43    statement -> empty
Rule 44    expression_statement -> expression SEMICOLON
Rule 45    expression -> assignment_expression
Rule 46    expression -> binary_expression
Rule 47    expression -> unary_expression
Rule 48    expression -> term
Rule 49    assignment_expression -> IDENTIFIER ASSIGN expression
Rule 50    assignment_expression -> array_access ASSIGN expression
Rule 51    binary_expression -> expression PLUS expression
Rule 52    binary_expression -> expression MINUS expression
Rule 53    binary_expression -> expression TIMES expression
Rule 54    binary_expression -> expression DIVIDE expression
Rule 55    binary_expression -> expression MOD expression
Rule 56    binary_expression -> expression EQ expression
Rule 57    binary_expression -> expression NEQ expression
Rule 58    binary_expression -> expression LT expression
Rule 59    binary_expression -> expression GT expression
Rule 60    binary_expression -> expression LTE expression
Rule 61    binary_expression -> expression GTE expression
Rule 62    binary_expression -> expression AND expression
Rule 63    binary_expression -> expression OR expression
Rule 64    unary_expression -> MINUS expression
Rule 65    unary_expression -> NOT expression
Rule 66    unary_expression -> INC IDENTIFIER
Rule 67    unary_expression -> DEC IDENTIFIER
Rule 68    unary_expression -> IDENTIFIER INC
Rule 69    unary_expression -> IDENTIFIER DEC
Rule 70    term -> IDENTIFIER
Rule 71    term -> INT_LITERAL
Rule 72    term -> FLOAT_LITERAL
Rule 73    term -> CHAR_LITERAL
Rule 74    term -> STRING_LITERAL
Rule 75    term -> LPAREN expression RPAREN
Rule 76    term -> function_call
Rule 77    term -> array_access
Rule 78    function_call -> IDENTIFIER LPAREN argument_list RPAREN
Rule 79    array_access -> IDENTIFIER LBRACKET expression RBRACKET
Rule 80    argument_list -> argument_list COMMA expression
Rule 81    argument_list -> expression
Rule 82    argument_list -> empty
Rule 83    selection_statement -> IF LPAREN expression RPAREN statement
Rule 84    selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 85    iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 86    iteration_statement -> FOR LPAREN expression_statement expression_statement expression RPAREN statement
Rule 87    iteration_statement -> FOR LPAREN var_declaration expression_statement expression RPAREN statement
Rule 88    return_statement -> RETURN expression SEMICOLON
Rule 89    continue_statement -> CONTINUE SEMICOLON
Rule 90    break_statement -> BREAK SEMICOLON

Terminals, with rules where they appear

AND                  : 62
ASSIGN               : 10 12 13 14 15 49 50
BREAK                : 90
CHAR                 : 18
CHAR_LITERAL         : 73
COMMA                : 20 24 80
COMMENT_MULTI        : 
COMMENT_SINGLE       : 
CONTINUE             : 89
DEC                  : 67 69
DIVIDE               : 54
ELSE                 : 84
EQ                   : 56
FLOAT                : 17
FLOAT_LITERAL        : 72
FOR                  : 86 87
GT                   : 59
GTE                  : 61
IDENTIFIER           : 8 9 10 11 12 13 14 15 22 23 27 28 29 49 66 67 68 69 70 78 79
IF                   : 83 84
INC                  : 66 68
INT                  : 16
INT_LITERAL          : 71
LBRACE               : 12 13 31
LBRACKET             : 11 12 13 14 15 28 79
LPAREN               : 22 23 75 78 83 84 85 86 87
LT                   : 58
LTE                  : 60
MINUS                : 52 64
MOD                  : 55
NEQ                  : 57
NOT                  : 65
OR                   : 63
PLUS                 : 51
RBRACE               : 12 13 31
RBRACKET             : 11 12 13 14 15 28 79
RETURN               : 88
RPAREN               : 22 23 75 78 83 84 85 86 87
SEMICOLON            : 8 9 10 11 12 13 14 15 22 44 88 89 90
STRING_LITERAL       : 14 15 74
TIMES                : 9 29 53
VOID                 : 19
WHILE                : 85
error                : 

Nonterminals, with rules where they appear

argument_list        : 78 80
array_access         : 50 77
array_declaration    : 7 42
array_list           : 12 13 20
assignment_expression : 45
binary_expression    : 46
break_statement      : 40
compound_statement   : 23 35
continue_statement   : 39
declaration          : 2 3
declaration_list     : 1 2
empty                : 26 43 82
expression           : 10 11 12 14 20 21 44 49 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 65 75 79 80 81 83 84 85 86 87 88
expression_statement : 34 86 86 87
function_call        : 76
function_declaration : 5
function_definition  : 6
iteration_statement  : 37
param                : 24 25
param_list           : 22 23 24
program              : 0
return_statement     : 38
selection_statement  : 36
statement            : 32 33 83 84 84 85 86 87
statement_list       : 31 32
term                 : 48
type_specifier       : 8 9 10 11 12 13 14 15 22 23 27 28 29
unary_expression     : 47
var_declaration      : 4 41 87

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . function_declaration
    (6) declaration -> . function_definition
    (7) declaration -> . array_declaration
    (8) var_declaration -> . type_specifier IDENTIFIER SEMICOLON
    (9) var_declaration -> . type_specifier TIMES IDENTIFIER SEMICOLON
    (10) var_declaration -> . type_specifier IDENTIFIER ASSIGN expression SEMICOLON
    (22) function_declaration -> . type_specifier IDENTIFIER LPAREN param_list RPAREN SEMICOLON
    (23) function_definition -> . type_specifier IDENTIFIER LPAREN param_list RPAREN compound_statement
    (11) array_declaration -> . type_specifier IDENTIFIER LBRACKET expression RBRACKET SEMICOLON
    (12) array_declaration -> . type_specifier IDENTIFIER LBRACKET expression RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
    (13) array_declaration -> . type_specifier IDENTIFIER LBRACKET RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
    (14) array_declaration -> . type_specifier IDENTIFIER LBRACKET expression RBRACKET ASSIGN STRING_LITERAL SEMICOLON
    (15) array_declaration -> . type_specifier IDENTIFIER LBRACKET RBRACKET ASSIGN STRING_LITERAL SEMICOLON
    (16) type_specifier -> . INT
    (17) type_specifier -> . FLOAT
    (18) type_specifier -> . CHAR
    (19) type_specifier -> . VOID

    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11
    VOID            shift and go to state 12

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    var_declaration                shift and go to state 4
    function_declaration           shift and go to state 5
    function_definition            shift and go to state 6
    array_declaration              shift and go to state 7
    type_specifier                 shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . function_declaration
    (6) declaration -> . function_definition
    (7) declaration -> . array_declaration
    (8) var_declaration -> . type_specifier IDENTIFIER SEMICOLON
    (9) var_declaration -> . type_specifier TIMES IDENTIFIER SEMICOLON
    (10) var_declaration -> . type_specifier IDENTIFIER ASSIGN expression SEMICOLON
    (22) function_declaration -> . type_specifier IDENTIFIER LPAREN param_list RPAREN SEMICOLON
    (23) function_definition -> . type_specifier IDENTIFIER LPAREN param_list RPAREN compound_statement
    (11) array_declaration -> . type_specifier IDENTIFIER LBRACKET expression RBRACKET SEMICOLON
    (12) array_declaration -> . type_specifier IDENTIFIER LBRACKET expression RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
    (13) array_declaration -> . type_specifier IDENTIFIER LBRACKET RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
    (14) array_declaration -> . type_specifier IDENTIFIER LBRACKET expression RBRACKET ASSIGN STRING_LITERAL SEMICOLON
    (15) array_declaration -> . type_specifier IDENTIFIER LBRACKET RBRACKET ASSIGN STRING_LITERAL SEMICOLON
    (16) type_specifier -> . INT
    (17) type_specifier -> . FLOAT
    (18) type_specifier -> . CHAR
    (19) type_specifier -> . VOID

    $end            reduce using rule 1 (program -> declaration_list .)
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11
    VOID            shift and go to state 12

    declaration                    shift and go to state 13
    var_declaration                shift and go to state 4
    function_declaration           shift and go to state 5
    function_definition            shift and go to state 6
    array_declaration              shift and go to state 7
    type_specifier                 shift and go to state 8

state 3

    (3) declaration_list -> declaration .

    INT             reduce using rule 3 (declaration_list -> declaration .)
    FLOAT           reduce using rule 3 (declaration_list -> declaration .)
    CHAR            reduce using rule 3 (declaration_list -> declaration .)
    VOID            reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> var_declaration .

    INT             reduce using rule 4 (declaration -> var_declaration .)
    FLOAT           reduce using rule 4 (declaration -> var_declaration .)
    CHAR            reduce using rule 4 (declaration -> var_declaration .)
    VOID            reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)


state 5

    (5) declaration -> function_declaration .

    INT             reduce using rule 5 (declaration -> function_declaration .)
    FLOAT           reduce using rule 5 (declaration -> function_declaration .)
    CHAR            reduce using rule 5 (declaration -> function_declaration .)
    VOID            reduce using rule 5 (declaration -> function_declaration .)
    $end            reduce using rule 5 (declaration -> function_declaration .)


state 6

    (6) declaration -> function_definition .

    INT             reduce using rule 6 (declaration -> function_definition .)
    FLOAT           reduce using rule 6 (declaration -> function_definition .)
    CHAR            reduce using rule 6 (declaration -> function_definition .)
    VOID            reduce using rule 6 (declaration -> function_definition .)
    $end            reduce using rule 6 (declaration -> function_definition .)


state 7

    (7) declaration -> array_declaration .

    INT             reduce using rule 7 (declaration -> array_declaration .)
    FLOAT           reduce using rule 7 (declaration -> array_declaration .)
    CHAR            reduce using rule 7 (declaration -> array_declaration .)
    VOID            reduce using rule 7 (declaration -> array_declaration .)
    $end            reduce using rule 7 (declaration -> array_declaration .)


state 8

    (8) var_declaration -> type_specifier . IDENTIFIER SEMICOLON
    (9) var_declaration -> type_specifier . TIMES IDENTIFIER SEMICOLON
    (10) var_declaration -> type_specifier . IDENTIFIER ASSIGN expression SEMICOLON
    (22) function_declaration -> type_specifier . IDENTIFIER LPAREN param_list RPAREN SEMICOLON
    (23) function_definition -> type_specifier . IDENTIFIER LPAREN param_list RPAREN compound_statement
    (11) array_declaration -> type_specifier . IDENTIFIER LBRACKET expression RBRACKET SEMICOLON
    (12) array_declaration -> type_specifier . IDENTIFIER LBRACKET expression RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
    (13) array_declaration -> type_specifier . IDENTIFIER LBRACKET RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
    (14) array_declaration -> type_specifier . IDENTIFIER LBRACKET expression RBRACKET ASSIGN STRING_LITERAL SEMICOLON
    (15) array_declaration -> type_specifier . IDENTIFIER LBRACKET RBRACKET ASSIGN STRING_LITERAL SEMICOLON

    IDENTIFIER      shift and go to state 14
    TIMES           shift and go to state 15


state 9

    (16) type_specifier -> INT .

    IDENTIFIER      reduce using rule 16 (type_specifier -> INT .)
    TIMES           reduce using rule 16 (type_specifier -> INT .)


state 10

    (17) type_specifier -> FLOAT .

    IDENTIFIER      reduce using rule 17 (type_specifier -> FLOAT .)
    TIMES           reduce using rule 17 (type_specifier -> FLOAT .)


state 11

    (18) type_specifier -> CHAR .

    IDENTIFIER      reduce using rule 18 (type_specifier -> CHAR .)
    TIMES           reduce using rule 18 (type_specifier -> CHAR .)


state 12

    (19) type_specifier -> VOID .

    IDENTIFIER      reduce using rule 19 (type_specifier -> VOID .)
    TIMES           reduce using rule 19 (type_specifier -> VOID .)


state 13

    (2) declaration_list -> declaration_list declaration .

    INT             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    FLOAT           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    CHAR            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    VOID            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 14

    (8) var_declaration -> type_specifier IDENTIFIER . SEMICOLON
    (10) var_declaration -> type_specifier IDENTIFIER . ASSIGN expression SEMICOLON
    (22) function_declaration -> type_specifier IDENTIFIER . LPAREN param_list RPAREN SEMICOLON
    (23) function_definition -> type_specifier IDENTIFIER . LPAREN param_list RPAREN compound_statement
    (11) array_declaration -> type_specifier IDENTIFIER . LBRACKET expression RBRACKET SEMICOLON
    (12) array_declaration -> type_specifier IDENTIFIER . LBRACKET expression RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
    (13) array_declaration -> type_specifier IDENTIFIER . LBRACKET RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
    (14) array_declaration -> type_specifier IDENTIFIER . LBRACKET expression RBRACKET ASSIGN STRING_LITERAL SEMICOLON
    (15) array_declaration -> type_specifier IDENTIFIER . LBRACKET RBRACKET ASSIGN STRING_LITERAL SEMICOLON

    SEMICOLON       shift and go to state 16
    ASSIGN          shift and go to state 17
    LPAREN          shift and go to state 18
    LBRACKET        shift and go to state 19


state 15

    (9) var_declaration -> type_specifier TIMES . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 20


state 16

    (8) var_declaration -> type_specifier IDENTIFIER SEMICOLON .

    INT             reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    FLOAT           reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    CHAR            reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    VOID            reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    $end            reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    RBRACE          reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    LBRACE          reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    IF              reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    WHILE           reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    FOR             reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    RETURN          reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    CONTINUE        reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    BREAK           reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    IDENTIFIER      reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    MINUS           reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    NOT             reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    INC             reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    DEC             reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    INT_LITERAL     reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    FLOAT_LITERAL   reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    CHAR_LITERAL    reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    STRING_LITERAL  reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    LPAREN          reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    ELSE            reduce using rule 8 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)


state 17

    (10) var_declaration -> type_specifier IDENTIFIER ASSIGN . expression SEMICOLON
    (45) expression -> . assignment_expression
    (46) expression -> . binary_expression
    (47) expression -> . unary_expression
    (48) expression -> . term
    (49) assignment_expression -> . IDENTIFIER ASSIGN expression
    (50) assignment_expression -> . array_access ASSIGN expression
    (51) binary_expression -> . expression PLUS expression
    (52) binary_expression -> . expression MINUS expression
    (53) binary_expression -> . expression TIMES expression
    (54) binary_expression -> . expression DIVIDE expression
    (55) binary_expression -> . expression MOD expression
    (56) binary_expression -> . expression EQ expression
    (57) binary_expression -> . expression NEQ expression
    (58) binary_expression -> . expression LT expression
    (59) binary_expression -> . expression GT expression
    (60) binary_expression -> . expression LTE expression
    (61) binary_expression -> . expression GTE expression
    (62) binary_expression -> . expression AND expression
    (63) binary_expression -> . expression OR expression
    (64) unary_expression -> . MINUS expression
    (65) unary_expression -> . NOT expression
    (66) unary_expression -> . INC IDENTIFIER
    (67) unary_expression -> . DEC IDENTIFIER
    (68) unary_expression -> . IDENTIFIER INC
    (69) unary_expression -> . IDENTIFIER DEC
    (70) term -> . IDENTIFIER
    (71) term -> . INT_LITERAL
    (72) term -> . FLOAT_LITERAL
    (73) term -> . CHAR_LITERAL
    (74) term -> . STRING_LITERAL
    (75) term -> . LPAREN expression RPAREN
    (76) term -> . function_call
    (77) term -> . array_access
    (79) array_access -> . IDENTIFIER LBRACKET expression RBRACKET
    (78) function_call -> . IDENTIFIER LPAREN argument_list RPAREN

    IDENTIFIER      shift and go to state 21
    MINUS           shift and go to state 28
    NOT             shift and go to state 29
    INC             shift and go to state 30
    DEC             shift and go to state 31
    INT_LITERAL     shift and go to state 32
    FLOAT_LITERAL   shift and go to state 33
    CHAR_LITERAL    shift and go to state 34
    STRING_LITERAL  shift and go to state 35
    LPAREN          shift and go to state 36

    expression                     shift and go to state 22
    assignment_expression          shift and go to state 23
    binary_expression              shift and go to state 24
    unary_expression               shift and go to state 25
    term                           shift and go to state 26
    array_access                   shift and go to state 27
    function_call                  shift and go to state 37

state 18

    (22) function_declaration -> type_specifier IDENTIFIER LPAREN . param_list RPAREN SEMICOLON
    (23) function_definition -> type_specifier IDENTIFIER LPAREN . param_list RPAREN compound_statement
    (24) param_list -> . param_list COMMA param
    (25) param_list -> . param
    (26) param_list -> . empty
    (27) param -> . type_specifier IDENTIFIER
    (28) param -> . type_specifier IDENTIFIER LBRACKET RBRACKET
    (29) param -> . type_specifier TIMES IDENTIFIER
    (30) empty -> .
    (16) type_specifier -> . INT
    (17) type_specifier -> . FLOAT
    (18) type_specifier -> . CHAR
    (19) type_specifier -> . VOID

    RPAREN          reduce using rule 30 (empty -> .)
    COMMA           reduce using rule 30 (empty -> .)
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11
    VOID            shift and go to state 12

    type_specifier                 shift and go to state 38
    param_list                     shift and go to state 39
    param                          shift and go to state 40
    empty                          shift and go to state 41

state 19

    (11) array_declaration -> type_specifier IDENTIFIER LBRACKET . expression RBRACKET SEMICOLON
    (12) array_declaration -> type_specifier IDENTIFIER LBRACKET . expression RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
    (13) array_declaration -> type_specifier IDENTIFIER LBRACKET . RBRACKET ASSIGN LBRACE array_list RBRACE SEMICOLON
    (14) array_declaration -> type_specifier IDENTIFIER LBRACKET . expression RBRACKET ASSIGN STRING_LITERAL SEMICOLON
    (15) array_declaration -> type_specifier IDENTIFIER LBRACKET . RBRACKET ASSIGN STRING_LITERAL SEMICOLON
    (45) expression -> . assignment_expression
    (46) expression -> . binary_expression
    (47) expression -> . unary_expression
    (48) expression -> . term
    (49) assignment_expression -> . IDENTIFIER ASSIGN expression
    (50) assignment_expression -> . array_access ASSIGN expression
    (51) binary_expression -> . expression PLUS expression
    (52) binary_expression -> . expression MINUS expression
    (53) binary_expression -> . expression TIMES expression
    (54) binary_expression -> . expression DIVIDE expression
    (55) binary_expression -> . expression MOD expression
    (56) binary_expression -> . expression EQ expression
    (57) binary_expression -> . expression NEQ expression
    (58) binary_expression -> . expression LT expression
    (59) binary_expression -> . expression GT expression
    (60) binary_expression -> . expression LTE expression
    (61) binary_expression -> . expression GTE expression
    (62) binary_expression -> . expression AND expression
    (63) binary_expression -> . expression OR expression
    (64) unary_expression -> . MINUS expression
    (65) unary_expression -> . NOT expression
    (66) unary_expression -> . INC IDENTIFIER
    (67) unary_expression -> . DEC IDENTIFIER
    (68) unary_expression -> . IDENTIFIER INC
    (69) unary_expression -> . IDENTIFIER DEC
    (70) term -> . IDENTIFIER
    (71) term -> . INT_LITERAL
    (72) term -> . FLOAT_LITERAL
    (73) term -> . CHAR_LITERAL
    (74) term -> . STRING_LITERAL
    (75) term -> . LPAREN expression RPAREN
    (76) term -> . function_call
    (77) term -> . array_access
    (79) array_access -> . IDENTIFIER LBRACKET expression RBRACKET
    (78) function_call -> . IDENTIFIER LPAREN argument_list RPAREN

    RBRACKET        shift and go to state 43
    IDENTIFIER      shift and go to state 21
    MINUS           shift and go to state 28
    NOT             shift and go to state 29
    INC             shift and go to state 30
    DEC             shift and go to state 31
    INT_LITERAL     shift and go to state 32
    FLOAT_LITERAL   shift and go to state 33
    CHAR_LITERAL    shift and go to state 34
    STRING_LITERAL  shift and go to state 35
    LPAREN          shift and go to state 36

    expression                     shift and go to state 42
    assignment_expression          shift and go to state 23
    binary_expression              shift and go to state 24
    unary_expression               shift and go to state 25
    term                           shift and go to state 26
    array_access                   shift and go to state 27
    function_call                  shift and go to state 37

state 20

    (9) var_declaration -> type_specifier TIMES IDENTIFIER . SEMICOLON

    SEMICOLON       shift and go to state 44


state 21

    (49) assignment_expression -> IDENTIFIER . ASSIGN expression
    (68) unary_expression -> IDENTIFIER . INC
    (69) unary_expression -> IDENTIFIER . DEC
    (70) term -> IDENTIFIER .
    (79) array_access -> IDENTIFIER . LBRACKET expression RBRACKET
    (78) function_call -> IDENTIFIER . LPAREN argument_list RPAREN

    ASSIGN          shift and go to state 45
    INC             shift and go to state 46
    DEC             shift and go to state 47
    SEMICOLON       reduce using rule 70 (term -> IDENTIFIER .)
    PLUS            reduce using rule 70 (term -> IDENTIFIER .)
    MINUS           reduce using rule 70 (term -> IDENTIFIER .)
    TIMES           reduce using rule 70 (term -> IDENTIFIER .)
    DIVIDE          reduce using rule 70 (term -> IDENTIFIER .)
    MOD             reduce using rule 70 (term -> IDENTIFIER .)
    EQ              reduce using rule 70 (term -> IDENTIFIER .)
    NEQ             reduce using rule 70 (term -> IDENTIFIER .)
    LT              reduce using rule 70 (term -> IDENTIFIER .)
    GT              reduce using rule 70 (term -> IDENTIFIER .)
    LTE             reduce using rule 70 (term -> IDENTIFIER .)
    GTE             reduce using rule 70 (term -> IDENTIFIER .)
    AND             reduce using rule 70 (term -> IDENTIFIER .)
    OR              reduce using rule 70 (term -> IDENTIFIER .)
    RBRACKET        reduce using rule 70 (term -> IDENTIFIER .)
    RPAREN          reduce using rule 70 (term -> IDENTIFIER .)
    COMMA           reduce using rule 70 (term -> IDENTIFIER .)
    RBRACE          reduce using rule 70 (term -> IDENTIFIER .)
    LBRACKET        shift and go to state 48
    LPAREN          shift and go to state 49


state 22

    (10) var_declaration -> type_specifier IDENTIFIER ASSIGN expression . SEMICOLON
    (51) binary_expression -> expression . PLUS expression
    (52) binary_expression -> expression . MINUS expression
    (53) binary_expression -> expression . TIMES expression
    (54) binary_expression -> expression . DIVIDE expression
    (55) binary_expression -> expression . MOD expression
    (56) binary_expression -> expression . EQ expression
    (57) binary_expression -> expression . NEQ expression
    (58) binary_expression -> expression . LT expression
    (59) binary_expression -> expression . GT expression
    (60) binary_expression -> expression . LTE expression
    (61) binary_expression -> expression . GTE expression
    (62) binary_expression -> expression . AND expression
    (63) binary_expression -> expression . OR expression

    SEMICOLON       shift and go to state 50
    PLUS            shift and go to state 51
    MINUS           shift and go to state 52
    TIMES           shift and go to state 53
    DIVIDE          shift and go to state 54
    MOD             shift and go to state 55
    EQ              shift and go to state 56
    NEQ             shift and go to state 57
    LT              shift and go to state 58
    GT              shift and go to state 59
    LTE             shift and go to state 60
    GTE             shift and go to state 61
    AND             shift and go to state 62
    OR              shift and go to state 63


state 23

    (45) expression -> assignment_expression .

    SEMICOLON       reduce using rule 45 (expression -> assignment_expression .)
    PLUS            reduce using rule 45 (expression -> assignment_expression .)
    MINUS           reduce using rule 45 (expression -> assignment_expression .)
    TIMES           reduce using rule 45 (expression -> assignment_expression .)
    DIVIDE          reduce using rule 45 (expression -> assignment_expression .)
    MOD             reduce using rule 45 (expression -> assignment_expression .)
    EQ              reduce using rule 45 (expression -> assignment_expression .)
    NEQ             reduce using rule 45 (expression -> assignment_expression .)
    LT              reduce using rule 45 (expression -> assignment_expression .)
    GT              reduce using rule 45 (expression -> assignment_expression .)
    LTE             reduce using rule 45 (expression -> assignment_expression .)
    GTE             reduce using rule 45 (expression -> assignment_expression .)
    AND             reduce using rule 45 (expression -> assignment_expression .)
    OR              reduce using rule 45 (expression -> assignment_expression .)
    RBRACKET        reduce using rule 45 (expression -> assignment_expression .)
    RPAREN          reduce using rule 45 (expression -> assignment_expression .)
    COMMA           reduce using rule 45 (expression -> assignment_expression .)
    RBRACE          reduce using rule 45 (expression -> assignment_expression .)


state 24

    (46) expression -> binary_expression .

    SEMICOLON       reduce using rule 46 (expression -> binary_expression .)
    PLUS            reduce using rule 46 (expression -> binary_expression .)
    MINUS           reduce using rule 46 (expression -> binary_expression .)
    TIMES           reduce using rule 46 (expression -> binary_expression .)
    DIVIDE          reduce using rule 46 (expression -> binary_expression .)
    MOD             reduce using rule 46 (expression -> binary_expression .)
    EQ              reduce using rule 46 (expression -> binary_expression .)
    NEQ             reduce using rule 46 (expression -> binary_expression .)
    LT              reduce using rule 46 (expression -> binary_expression .)
    GT              reduce using rule 46 (expression -> binary_expression .)
    LTE             reduce using rule 46 (expression -> binary_expression .)
    GTE             reduce using rule 46 (expression -> binary_expression .)
    AND             reduce using rule 46 (expression -> binary_expression .)
    OR              reduce using rule 46 (expression -> binary_expression .)
    RBRACKET        reduce using rule 46 (expression -> binary_expression .)
    RPAREN          reduce using rule 46 (expression -> binary_expression .)
    COMMA           reduce using rule 46 (expression -> binary_expression .)
    RBRACE          reduce using rule 46 (expression -> binary_expression .)


state 25

    (47) expression -> unary_expression .

    SEMICOLON       reduce using rule 47 (expression -> unary_expression .)
    PLUS            reduce using rule 47 (expression -> unary_expression .)
    MINUS           reduce using rule 47 (expression -> unary_expression .)
    TIMES           reduce using rule 47 (expression -> unary_expression .)
    DIVIDE          reduce using rule 47 (expression -> unary_expression .)
    MOD             reduce using rule 47 (expression -> unary_expression .)
    EQ              reduce using rule 47 (expression -> unary_expression .)
    NEQ             reduce using rule 47 (expression -> unary_expression .)
    LT              reduce using rule 47 (expression -> unary_expression .)
    GT              reduce using rule 47 (expression -> unary_expression .)
    LTE             reduce using rule 47 (expression -> unary_expression .)
    GTE             reduce using rule 47 (expression -> unary_expression .)
    AND             reduce using rule 47 (expression -> unary_expression .)
    OR              reduce using rule 47 (expression -> unary_expression .)
    RBRACKET        reduce using rule 47 (expression -> unary_expression .)
    RPAREN          reduce using rule 47 (expression -> unary_expression .)
    COMMA           reduce using rule 47 (expression -> unary_expression .)
    RBRACE          reduce using rule 47 (expression -> unary_expression .)


state 26

    (48) expression -> term .

    SEMICOLON       reduce using rule 48 (expression -> term .)
    PLUS            reduce using rule 48 (expression -> term .)
    MINUS           reduce using rule 48 (expression -> term .)
    TIMES           reduce using rule 48 (expression -> term .)
    DIVIDE          reduce using rule 48 (expression -> term .)
    MOD             reduce using rule 48 (expression -> term .)
    EQ              reduce using rule 48 (expression -> term .)
    NEQ             reduce using rule 48 (expression -> term .)
    LT              reduce using rule 48 (expression -> term .)
    GT              reduce using rule 48 (expression -> term .)
